--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "chance": "^1.0.2",
-    "express": "^4.13.4",
-    "md5": "^2.1.0"
+    "body-parser": "^1.17.2",
+    "chance": "^1.0.10",
+    "express": "^4.15.4",
+    "md5": "^2.2.1",
+    "nodemon": "^1.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
