--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chance": "^1.0.10",
     "express": "^4.15.4",
     "md5": "^2.2.1",
+    "mongodb": "^2.2.31",
     "nodemon": "^1.11.0"
   },
   "devDependencies": {
