--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "chance": "^1.0.10",
+    "cookie-session": "^1.3.1",
     "express": "^4.15.4",
     "md5": "^2.2.1",
     "mongodb": "^2.2.31",
